2002-03-27  Jody Goldberg <jody@gnome.org>

	* configure.in : Include the necessary gconf setup to install schemas.

2002-03-27  Jody Goldberg <jody@gnome.org>

	* src/io-context.c (gnm_io_get_password) : new.
	* src/command-context.c (cmd_context_get_password) : new.
	* src/workbook-control-gui.c (wbcg_get_password) : new.

2002-03-26  Jody Goldberg <jody@gnome.org>

	* src/parser.y (yylex) : make utf8 clean.
	(find_char) : ditto.
	(find_matching_close) : ditto.

2002-03-26  Jody Goldberg <jody@gnome.org>

	* configure.in : add schemas dir.

	* src/gnumeric-canvas.c (gnumeric_canvas_new) : disable auto-center.

2002-03-27  Jukka-Pekka Iivonen  <jiivonen@hutcs.cs.hut.fi>

	* src/xml-io.c: Added saving and loading of Solver's options.

2002-03-25  Jody Goldberg <jody@gnome.org>

	* Release 1.1.2

2002-03-26  Morten Welinder  <terra@diku.dk>

	* src/rendered-value.c (rendered_value_new): Just peek directly
	into the approx_width structure -- everyone else does that.  Take
	worst case of "e", signs, and decimal points into account.

	* src/style.h (StyleFont): Change floats to doubles.  Add more
	approx_width fields.

	* src/style.c (style_font_get_width_pts): Remove.

2002-03-26  Morten Welinder  <terra@diku.dk>

	* src/style.c (style_font_new_simple): Translate pixels to points
	properly.

	* src/style.c (style_font_new_simple): Fix misplaced #endif.

	* src/format.c (format_value): Fix general display of floats.
	Oops.

	* src/value.c (value_release): Use the fact that VALUE_TERMINATE
	is an error value.

2002-03-26  Morten Welinder  <terra@diku.dk>

	* src/value.c (value_new_bool, value_new_int, value_release): Use
	int/bool pool.
	(value_init): Initialise int/bool pool.
	(value_shutdown): Free int/bool pool.

	* src/gutils.c (gnm_mem_chunk_new): Use smaller alignment when
	known to be possible.

2002-03-26  Andreas J. Guelzow <aguelzow@taliesin.ca>

	* src/workbook-control-gui.c : added insert-function menu item
