@@ -11,7 +11,7 @@ Release Critical
 - We need to somehow add --export-dynamic to the gnumeric link line, or else
   plugins won't load on Solaris/gcc.
 - Why doesn't float_range_function2 use its "flags" argument?
-- Printing dialogs are shot.
+- Print and Print Preview are non-functional..
 - 3D reference fixes on sheet deletion
 - Modify Makefiles to install gconf schemas
 - iconv utf8 password -> usc4 before hashing
