@@ -2,26 +2,80 @@
 <!DOCTYPE glade-interface SYSTEM "glade-2.0.dtd" >
 
 <glade-interface>
-  <requires lib="gnome" />
-
-  <widget class="GnomePropertyBox" id="hf-config">
+  <widget class="GtkDialog" id="hf-config">
     <property name="visible">no</property>
+    <property name="type">GTK_WINDOW_TOPLEVEL</property>
     <property name="modal">no</property>
     <property name="allow_shrink">no</property>
     <property name="allow_grow">no</property>
     <property name="window-position">GTK_WIN_POS_NONE</property>
 
-    <child internal-child="notebook">
-      <widget class="GtkNotebook" id="notebook1">
-        <property name="can_focus">yes</property>
-        <property name="show_tabs">yes</property>
-        <property name="show_border">yes</property>
-        <property name="tab_pos">GTK_POS_TOP</property>
-        <property name="scrollable">no</property>
-        <property name="tab_hborder">2</property>
-        <property name="tab_vborder">2</property>
-        <property name="enable-popup">no</property>
+    <child internal-child="vbox">
+      <widget class="GtkVBox" id="dialog-vbox1">
+        <property name="homogeneous">no</property>
+        <property name="spacing">8</property>
         <property name="visible">yes</property>
+
+        <child internal-child="action_area">
+          <widget class="GtkHButtonBox" id="dialog-action_area1">
+            <property name="layout_style">GTK_BUTTONBOX_END</property>
+            <property name="spacing">8</property>
+            <property name="visible">yes</property>
+
+            <child>
+              <widget class="GtkButton" id="help_button">
+                <property name="can_default">yes</property>
+                <property name="can_focus">yes</property>
+                <property name="visible">yes</property>
+                <property name="label">gtk-help</property>
+                <property name="use_stock">yes</property>
+                <property name="use_underline">yes</property>
+              </widget>
+            </child>
+
+            <child>
+              <widget class="GtkButton" id="cancel_button">
+                <property name="can_default">yes</property>
+                <property name="can_focus">yes</property>
+                <property name="visible">yes</property>
+                <property name="label">gtk-cancel</property>
+                <property name="use_stock">yes</property>
+                <property name="use_underline">yes</property>
+              </widget>
+            </child>
+
+            <child>
+              <widget class="GtkButton" id="apply_button">
+                <property name="can_default">yes</property>
+                <property name="can_focus">yes</property>
+                <property name="visible">yes</property>
+                <property name="label">gtk-apply</property>
+                <property name="use_stock">yes</property>
+                <property name="use_underline">yes</property>
+              </widget>
+            </child>
+
+            <child>
+              <widget class="GtkButton" id="ok_button">
+                <property name="can_default">yes</property>
+                <property name="has_default">yes</property>
+                <property name="can_focus">yes</property>
+                <property name="visible">yes</property>
+                <property name="label">gtk-ok</property>
+                <property name="use_stock">yes</property>
+                <property name="use_underline">yes</property>
+              </widget>
+            </child>
+
+          </widget>
+          <packing>
+            <property name="padding">0</property>
+            <property name="expand">no</property>
+            <property name="fill">yes</property>
+            <property name="pack_type">GTK_PACK_END</property>
+          </packing>
+        </child>
+
 
         <child>
           <widget class="GtkTable" id="table1">
@@ -135,7 +189,6 @@
                 <property name="can_focus">yes</property>
                 <property name="editable">yes</property>
                 <property name="text" translatable="yes"></property>
-                <property name="max-length">0</property>
                 <property name="visibility">yes</property>
                 <property name="visible">yes</property>
               </widget>
@@ -156,7 +209,6 @@
                 <property name="can_focus">yes</property>
                 <property name="editable">yes</property>
                 <property name="text" translatable="yes"></property>
-                <property name="max-length">0</property>
                 <property name="visibility">yes</property>
                 <property name="visible">yes</property>
               </widget>
@@ -177,7 +229,6 @@
                 <property name="can_focus">yes</property>
                 <property name="editable">yes</property>
                 <property name="text" translatable="yes"></property>
-                <property name="max-length">0</property>
                 <property name="visibility">yes</property>
                 <property name="visible">yes</property>
               </widget>
@@ -195,24 +246,9 @@
           </widget>
         </child>
 
-        <child>
-          <widget class="GtkLabel" id="tab-label">
-            <property name="label" translatable="yes">Header/Footer Config</property>
-            <property name="justify">GTK_JUSTIFY_CENTER</property>
-            <property name="wrap">no</property>
-            <property name="xalign">0.5</property>
-            <property name="yalign">0.5</property>
-            <property name="xpad">0</property>
-            <property name="ypad">0</property>
-            <property name="visible">yes</property>
-          </widget>
-          <packing>
-            <property name="type">tab</property>
-          </packing>
-        </child>
       </widget>
       <packing>
-        <property name="padding">0</property>
+        <property name="padding">4</property>
         <property name="expand">yes</property>
         <property name="fill">yes</property>
       </packing>
