@@ -1,7 +1,7 @@
 Gnumeric 1.1.3
 
 Andreas:
-	* Port print-setup dialog (except custom headers/footers)
+	* Port print-setup dialog
 
 Jody:
 	* Make expr parser utf8 clean.
